tests/ui/lifetimes/issue-64173-unused-lifetimes.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-64173-unused-lifetimes.rs:16:23
   |
LL |     beta: [(); foo::<&'a ()>()],
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/issue-64173-unused-lifetimes.rs:4:28
   |
LL |     array: [(); size_of::<&Self>()],
   |                            ^^^^

error[E0392]: parameter `'s` is never used
  --> $DIR/issue-64173-unused-lifetimes.rs:3:12
   |
LL | struct Foo<'s> {
   |            ^^ unused parameter
   |
   = help: consider removing `'s`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: parameter `'a` is never used
  --> $DIR/issue-64173-unused-lifetimes.rs:15:12
   |
LL | struct Bar<'a> {
   |            ^^ unused parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0392`.
